# apps/web-angular/src/app/app.routes.ts
@@ -5,6 +5,7 @@ export const routes: Routes = [
   { path: '', redirectTo: '/home', pathMatch: 'full' },
   { path: 'home', loadComponent: () => import('./home/home.component').then(m => m.HomeComponent) },
   { path: 'listings/:id', loadComponent: () => import('./listings/listing-detail.component').then(m => m.ListingDetailComponent) },
+  { path: 'hosts/:hostId', loadComponent: () => import('./host/host-profile.component').then(m => m.HostProfileComponent) },
   { path: 'account', canActivate: [authGuard], loadComponent: () => import('./account/account.component').then(m => m.AccountComponent) },
   { path: 'bookings', canActivate: [authGuard], loadComponent: () => import('./bookings/my-bookings.component').then(m => m.MyBookingsComponent) },
   { path: 'bookings/:id', canActivate: [authGuard], loadComponent: () => import('./bookings/booking-detail.component').then(m => m.BookingDetailComponent) },
